Designus-maximus-modified

--- a/index.html
+++ b/index.html
@@ -1,44 +1,39 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">
-    <title>Designus Maximus</title>
 
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="styles/style.css">
+  <title>Designus Maximus</title>
 
-    <div class="above-div">
-<div class="top-left">
-<img src="top-left-maximus.png" alt="">
-</div>
+</head>
 
-<div class="top-center">
-<img src="top-center-maximus.png" alt="">
-</div>
-
-<div class="top-right">
-<img src="top-right-maximus.png" alt="">
-</div>
-</div>
-
-
-  <div class="below-div">
-
-
-<div class="bottom-left">
-
-</div>
-
-<div class="bottom-center">
-
-</div>
-
-<div class="bottom-right">
-
-</div>
-
+<body>
+    <div class="row">
+      <div class="column">
+        <div class="row">
+          <img src="images/top-left-maximus.png" alt="">
+        </div>
+        <div class="row">
+          <img src="images/bottom-left-maximus.png" alt="">
+        </div>
+      </div>
+      <div class="column">
+        <div class="row">
+          <img src="images/top-center-maximus.png" alt="">
+        </div>
+        <div class="row">
+          <img src="images/bottom-center-maximus.png" alt="">
+        </div>
+      </div>
+      <div class="column">
+        <div class="row">
+          <img src="images/top-right-maximus.png" alt="">
+        </div>
+        <div class="row">
+          <img src="images/bottom-right-maximus.png" alt="">
+        </div>
+      </div>
     </div>
-
-  </body>
+</body>
 </html>
